--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+body{
+  max-width: 1220px;
+  background-color: var(--shape-body);
+  overflow: hidden;
+}
 
 
